--- a/README
+++ b/README
@@ -1,3 +1,16 @@
-php 操作插入查询数据库，返回json格式数据！
+##php 操作插入查询数据库，返回json格式数据！
 
-
+###示例数据库名：
+mydb
+###示例数据表：
+```sql
+CREATE TABLE student (
+  Id int(10) unsigned NOT NULL AUTO_INCREMENT,
+   `Name` varchar(255),
+  Sex int(1),
+  Age int(3) unsigned,
+  PRIMARY KEY (Id)
+)ENGINE=InnoDB DEFAULT CHARSET=utf8;
+ ```
+###分页查询浏览器访问链接
+<http://localhost:8088/php-mysql/index.php?f=gs&page=1&rows=10>
